--- a/gemini-clone/src/components/Sidebar/Sidebar.css
+++ b/gemini-clone/src/components/Sidebar/Sidebar.css
@@ -19,7 +19,7 @@
 
 .sidebar .new-chat{
     display: inline-flex;
-    margin-top: 10px;
+    margin-top: 50px;
     align-items: center;
     gap: 10px;
     padding: 10px 15px;
@@ -34,3 +34,35 @@
     display: flex;
     flex-direction: column;
 }
+
+.sidebar .recent-title{
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.sidebar .recent-entry{
+    display: flex;
+    align-items: start;
+    gap: 10px;
+    padding: 10px;
+    padding-right: 40px;
+    border-radius: 50px;
+    color: #282828;
+    cursor: pointer;
+}
+
+
+.sidebar .recent-entry:hover{
+    background-color: #e2e6eb;
+}
+
+.sidebar .bottom{
+    display: flex;
+    flex-direction: column;
+}
+
+/* optional as we have already applied this rules to recent-entry class */
+/* .sidebar .bottom-item{
+    padding-right: 10px;
+    cursor: pointer;
+} */
