--- a/gemini-clone/src/components/Main/Main.css
+++ b/gemini-clone/src/components/Main/Main.css
@@ -174,3 +174,10 @@
         background-position: 800px 0px;
     }
 }
+
+
+.result-data p{
+    font-size: 17px;
+    font-weight: 300;
+    line-height: 1.8;
+}
